# spec-store

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.agents/skills/spec-store/: SKILL.md
.agents/skills/spec-store/references/: architecture.md  ci-setup.md  commands.md  configuration.md  quality-gates.md  releasing.md  test-tracking.md
.githooks/: post-checkout  post-merge  pre-commit  pre-push
.github/actions/check/: action.yml
.github/workflows/: ci.yml  release.yml  version-check.yml
.spec-store/: baselines.json  config.toml  store.db  vectors.json
crates/spec-store-cli/: Cargo.toml
crates/spec-store-cli/src/: commands.rs  dispatch.rs  main.rs  reporter.rs
crates/spec-store-core/: Cargo.toml
crates/spec-store-core/src/: config.rs  error.rs  git.rs  lib.rs  util.rs
crates/spec-store-core/src/context/: generator.rs  mod.rs
crates/spec-store-core/src/coverage/: checker.rs  fn_coverage.rs  lcov.rs  mod.rs
crates/spec-store-core/src/hooks/: installer.rs  mod.rs
crates/spec-store-core/src/ops/: context_ops.rs  coverage_ops.rs  mod.rs  test_tracking.rs  worktree_ops.rs
crates/spec-store-core/src/reuse/: enforcer.rs  mod.rs
crates/spec-store-core/src/scanner/: block_measure.rs  language.rs  mod.rs  quality.rs  regex_scanner.rs  test_detect.rs  test_mapper.rs
crates/spec-store-core/src/store/: baseline.rs  mod.rs  structured.rs  vector.rs
crates/spec-store-mcp/: Cargo.toml
crates/spec-store-mcp/src/: main.rs  params.rs  tools.rs
