[workspace]
members = ["crates/spec-store-core", "crates/spec-store-cli", "crates/spec-store-mcp"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Codebase spec registry with semantic search, quality gates, and agent coordination"

[workspace.dependencies]
anyhow      = "1"
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
chrono      = { version = "0.4", features = ["serde"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
walkdir     = "2"
uuid        = { version = "1", features = ["v4"] }
regex       = "1"
sha2        = "0.10"
tokio       = { version = "1", features = ["full"] }
colored     = "2"
clap        = { version = "4", features = ["derive"] }
tempfile    = "3"
spec-store-core = { path = "crates/spec-store-core" }

[profile.release]
opt-level = 3
lto       = true
strip     = true
