[package]
name = "spec-store-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for spec-store: stores, scanners, coverage, quality gates"

[dependencies]
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
toml.workspace       = true
chrono.workspace     = true
rusqlite.workspace   = true
walkdir.workspace    = true
uuid.workspace       = true
regex.workspace      = true
sha2.workspace       = true

[dev-dependencies]
tempfile.workspace = true
