[package]
name = "spec-store-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for spec-store: exposes quality gates, coverage, and registry as agent tools"

[[bin]]
name = "spec-store-mcp"
path = "src/main.rs"

[dependencies]
spec-store-core.workspace = true
anyhow.workspace          = true
tokio.workspace           = true
serde.workspace           = true
serde_json.workspace      = true
toml.workspace            = true
rmcp                      = { version = "1.3", features = ["server", "transport-io"] }
schemars                  = "1"
tracing                   = "0.1"
tracing-subscriber        = "0.3"
